--- a/Views/SipTblEmpleadoes/Create.cshtml
+++ b/Views/SipTblEmpleadoes/Create.cshtml
@@ -13,10 +13,11 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="SipTblEmpId" class="control-label">ID del empleado</label>
-                <input asp-for="SipTblEmpId" class="form-control" />
-                <span asp-validation-for="SipTblEmpId" class="text-danger"></span>
+               <label asp-for="SipTblEmpId" class="control-label">Código de Empleado</label>
+               <input asp-for="SipTblEmpId" class="form-control" />
+               <span asp-validation-for="SipTblEmpId" class="text-danger"></span>
             </div>
+     
             <div class="form-group">
                 <label asp-for="SipTblEmpNombres" class="control-label">Nombres</label>
                 <input asp-for="SipTblEmpNombres" class="form-control" />
